# studying-dbt-core

./: .gitignore  pyproject.toml
northwind_render/: dbt_project.yml
