[tool.poetry]
name = "studying-dbt-core"
version = "0.1.0"
description = ""
authors = ["Rafael Jürkfitz <rafaeljurkfitz@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
dbt-postgres = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
